// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if statements should compile base if 1`] = `
"if ($__m = $__m[1].match(/foo/)) {
    let command = await term.read('? ');
    if ($__m = commad.match(/bar/)) {
        term.echo($__m[1]);
    }
}"
`;

exports[`if statements should compile if_else 1`] = `
"if ($__m = $__m[1].match(/foo/)) {
    let command = await term.read('? ');
    if ($__m = commad.match(/(bar)/g)) {
        term.echo($__m[1]);
    } else if ($__m = command.match(/(baz)/g)) {
        term.echo($__m[1]);
    } else {
        term.echo('NOP');
    }
} else {
    term.echo('NOP');
}"
`;

exports[`if statements should compile multiple if_else  1`] = `
"if ($__m = $__m[1].match(/foo/)) {
    let command = await term.read('? ');
    if ($__m = commad.match(/(bar)/g)) {
        term.echo($__m[1]);
    } else if ($__m = command.match(/(baz)/g)) {
        term.echo($__m[1]);
    } else {
        term.echo('NOP');
    }
} else {
    term.echo('NOP');
}
let command = await term.read('? ');
if ($__m = command.match(/foo/)) {
    term.echo('1');
} else if ($__m = command.match(/bar/)) {
    term.echo('2');
} else {
    term.echo('3');
}"
`;
